# git-history

./: .gitignore  LICENSE.md  SPEC.md  git-history.bat  make_release.py  make_test_repo.py  manual_test.md  pyproject.toml
git_history/: __init__.py  __main__.py  editor.py
git_history/static/: app.js  index.html  manual.html  style.css
tests/: conftest.py  test_backend.py  test_challenging.py  test_cli.py  test_make_test_repo.py  test_rest_api.py  test_submodule.py  test_ui.py  test_worktree.py
