[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "git-history"
version = "0.1.0"
requires-python = ">=3.9"
# Requires git >= 2.26 (for --empty=keep support in git rebase)
dependencies = ["flask>=3.0"]

[project.urls]
Homepage = "http://helgesen.software"
Repository = "https://github.com/BjarneHelgesen/git-history"

[project.scripts]
git-history = "git_history:main"

[tool.setuptools]
py-modules = ["editor"]
packages = ["git_history"]

[tool.setuptools.package-data]
git_history = ["static/**/*"]
